Changing env variable according to docs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         dotnet-version: '7.0.x'
         source-url: https://api.nuget.org/v3/index.json
       env:
-        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
       
     - name: Publish
       run: dotnet nuget push artifacts/*.nupkg --skip-duplicate
