--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '7.0.x'
+        dotnet-version: '7.0.2'
 
     - name: Restore dependencies
       run: dotnet restore
@@ -28,13 +28,5 @@ jobs:
     - name: Pack
       run: dotnet pack --no-build --configuration Release --output artifacts
 
-    - name: Push
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '7.0.x'
-        source-url: https://api.nuget.org/v3/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
-      
     - name: Publish
-      run: dotnet nuget push artifacts/*.nupkg --skip-duplicate
+      run: dotnet nuget push "artifacts/*.nupkg" --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
