Using correct version, adding readme badges

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,13 @@ jobs:
       with:
         dotnet-version: '7.0.x'
 
+    - name: Restore tools
+      run: dotnet tool restore
+
+    - name: Use GitVersion
+      id: gitversion
+      run: echo "::set-output name=version::$(dotnet gitversion /showvariable=NuGetVersionV2)"
+
     - name: Restore dependencies
       run: dotnet restore
 
@@ -26,7 +33,7 @@ jobs:
       run: dotnet test --no-restore --verbosity normal
 
     - name: Pack
-      run: dotnet pack --no-build --configuration Release --output artifacts
+      run: dotnet pack --no-build --configuration Release /p:Version=${{ steps.gitversion.outputs.version }} --output artifacts
 
     - name: Publish
       run: dotnet nuget push "artifacts/*.nupkg" --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
