--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
+      with:
+        # Unshallow fetch of Git history allows correct version calculation.
+        fetch-depth: 0
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
