Project reference adjusted

--- a/src/Smola.NuGet.Versioning.Sample/Smola.NuGet.Versioning.Sample.csproj
+++ b/src/Smola.NuGet.Versioning.Sample/Smola.NuGet.Versioning.Sample.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>Dotnet.NuGet.Versioning</PackageId>
+    <PackageId>Smola.NuGet.Versioning</PackageId>
     <Title>NuGet Versioning</Title>
     <Description>Sample flow for NuGet package versioning.</Description>
     <Authors>Mario Smolcic</Authors>
